# pyqres

./: .gitignore  README.md  pyproject.toml
docs/: code_structure.md  volterra_numerical_methods.md  volterra_numerical_methods.tex
src/pyqres/: __init__.py  builders.py  data.py  datasets.py  experiment.py  fluent.py  metrics.py  presets.py  readout.py  specs.py
src/pyqres/baselines/: __init__.py  classical.py  esn.py
src/pyqres/core/: __init__.py  builders.py  control.py  factory.py  fluent.py  protocols.py  reservoir_params.py  specs.py
src/pyqres/dim/: __init__.py  analysis.py  experiment_utils.py  isotropy.py  linalg_utils.py  model.py  pauli.py  qrclib_model.py  streaming.py  sweep.py
src/pyqres/exact/: channel_map.py  hardware.py
src/pyqres/experiments/: __init__.py  cli.py  common.py  data.py  metrics.py  runner.py
src/pyqres/experiments/conf/: __init__.py  channel_equalization_benchmark.yaml  config.yaml
src/pyqres/experiments/conf/baseline/: __init__.py  default.yaml  large.yaml
src/pyqres/experiments/conf/experiment/: __init__.py  default.yaml
src/pyqres/experiments/conf/logging/: __init__.py  local.yaml
src/pyqres/experiments/conf/reservoir/: __init__.py  channel_map.yaml  channel_map_noisy_shots.yaml  channel_map_paper6.yaml  hardware_trajectory.yaml
src/pyqres/experiments/conf/task/: __init__.py  channel_equalization.yaml  stm.yaml  stm_fast.yaml  stm_gaussian.yaml
src/pyqres/qiskit/: __init__.py  config.py  reservoir.py
src/pyqres/simulation/: __init__.py  channel_map.py  exact_qrc.py  hardware.py
src/pyqres/tasks/: __init__.py  channel_equalization.py  mackey_glass.py  stm.py
src/pyqres/utils/: __init__.py  linear.py
src/qres/: __init__.py
tests/: test_imports.py
