[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyqres"
version = "0.2.0"
description = "Task-agnostic quantum reservoir computing package for simulation, Qiskit, experiment, and dimension-analysis workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Minwoo Kim"}]
dependencies = [
  "numpy>=1.24",
  "omegaconf>=2.3",
]

[project.optional-dependencies]
simulation = [
  "scipy>=1.10",
]
qiskit = [
  "qiskit>=1.0.0",
  "qiskit-aer>=0.14.0",
]
dim = [
  "scipy>=1.10",
]
experiments = [
  "hydra-core>=1.3",
  "matplotlib>=3.7",
  "pandas>=2.0",
]
all = [
  "qiskit>=1.0.0",
  "qiskit-aer>=0.14.0",
  "hydra-core>=1.3",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "scipy>=1.10",
]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.scripts]
pyqres-run = "pyqres.experiments.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyqres"]
include = ["src/pyqres/experiments/conf/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
